--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <title>Odin Tic Tac Toe</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+  <title>Odin Tic Tac Toe</title>
 </head>
 <body>
-    
+  <div class="board">
+    <div class="board-cell" id="0">-</div>
+    <div class="board-cell" id="1">-</div>
+    <div class="board-cell" id="2">-</div>
+    <div class="board-cell" id="3">-</div>
+    <div class="board-cell" id="4">-</div>
+    <div class="board-cell" id="5">-</div>
+    <div class="board-cell" id="6">-</div>
+    <div class="board-cell" id="7">-</div>
+    <div class="board-cell" id="8">-</div>
+  </div>
 </body>
 </html>
