--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
   <div class="board">
-    <div class="board-cell" id="0">-</div>
-    <div class="board-cell" id="1">-</div>
-    <div class="board-cell" id="2">-</div>
-    <div class="board-cell" id="3">-</div>
-    <div class="board-cell" id="4">-</div>
-    <div class="board-cell" id="5">-</div>
-    <div class="board-cell" id="6">-</div>
-    <div class="board-cell" id="7">-</div>
-    <div class="board-cell" id="8">-</div>
+    <button class="board-cell" data-index="0"></button>
+    <button class="board-cell" data-index="1"></button>
+    <button class="board-cell" data-index="2"></button>
+    <button class="board-cell" data-index="3"></button>
+    <button class="board-cell" data-index="4"></button>
+    <button class="board-cell" data-index="5"></button>
+    <button class="board-cell" data-index="6"></button>
+    <button class="board-cell" data-index="7"></button>
+    <button class="board-cell" data-index="8"></button>
   </div>
 </body>
 </html>
