--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
   <title>Odin Tic Tac Toe</title>
 </head>
 <body>
+  <div class="start-container">
+    <div class="start-title">Tic Tac Toe</div>
+    <div class="choose-container">
+      <div class="animal-container">
+        <img src="" alt="">
+        <div>Rat</div>
+      </div>
+      <div class="vs">VS</div>
+      <div class="animal-container">
+        <img src="" alt="">
+        <div>Cat</div>
+      </div>
+    </div>
+    <button class="start-button">Easy</button>
+    <div class="button-container">
+      <button class="start-button">Player vs Player</button>
+      <button class="start-button">Start</button>
+    </div>
+  </div>
   <div class="board">
     <button class="board-cell" data-index="0"></button>
     <button class="board-cell" data-index="1"></button>
