Add start game button and end game text/button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Odin Tic Tac Toe</title>
 </head>
 <body>
-  <div class="start-container">
+  <div class="start-container show">
     <div class="start-title">Tic Tac Toe</div>
     <div class="choose-container">
       <div class="animal-container">
@@ -25,22 +25,24 @@
         <div>Cat</div>
       </div>
     </div>
-    <button class="start-button">Easy</button>
+    <button class="settings-button">Easy</button>
     <div class="button-container">
-      <button class="start-button">Player vs Player</button>
-      <button class="start-button">Start</button>
+      <button class="settings-button">Player vs Player</button>
+      <button class="settings-button start">Start</button>
     </div>
   </div>
-  <div class="board">
-    <button class="board-cell" data-index="0"></button>
-    <button class="board-cell" data-index="1"></button>
-    <button class="board-cell" data-index="2"></button>
-    <button class="board-cell" data-index="3"></button>
-    <button class="board-cell" data-index="4"></button>
-    <button class="board-cell" data-index="5"></button>
-    <button class="board-cell" data-index="6"></button>
-    <button class="board-cell" data-index="7"></button>
-    <button class="board-cell" data-index="8"></button>
+  <div class="game-container">
+    <div class="board">
+      <button class="board-cell" data-index="0"></button>
+      <button class="board-cell" data-index="1"></button>
+      <button class="board-cell" data-index="2"></button>
+      <button class="board-cell" data-index="3"></button>
+      <button class="board-cell" data-index="4"></button>
+      <button class="board-cell" data-index="5"></button>
+      <button class="board-cell" data-index="6"></button>
+      <button class="board-cell" data-index="7"></button>
+      <button class="board-cell" data-index="8"></button>
+    </div>
   </div>
 </body>
 </html>
