Add a mode to allow player vs computer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <button class="settings-button">Easy</button>
     <div class="button-container">
-      <button class="settings-button">Player vs Player</button>
+      <button class="settings-button mode">Player vs Player</button>
       <button class="settings-button start">Start</button>
     </div>
   </div>
