Add player ability to change animal vs ai

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="start-title">Tic Tac Toe</div>
     <div class="choose-container">
       <div class="animal-container">
-        <img src="" alt="">
+        <img src="" alt="" id="rat">
         <div>Rat</div>
       </div>
       <div class="vs">VS</div>
       <div class="animal-container">
-        <img src="" alt="">
+        <img src="" alt="" id="cat">
         <div>Cat</div>
       </div>
     </div>
