Add difficulty setting to AI

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>Cat</div>
       </div>
     </div>
-    <button class="settings-button">Easy</button>
+    <button class="settings-button diff">Easy</button>
     <div class="button-container">
       <button class="settings-button mode">Player vs Player</button>
       <button class="settings-button start">Start</button>
