Add styles to game page

--- a/index.html
+++ b/index.html
@@ -32,16 +32,27 @@
     </div>
   </div>
   <div class="game-container">
-    <div class="board">
-      <button class="board-cell" data-index="0"></button>
-      <button class="board-cell" data-index="1"></button>
-      <button class="board-cell" data-index="2"></button>
-      <button class="board-cell" data-index="3"></button>
-      <button class="board-cell" data-index="4"></button>
-      <button class="board-cell" data-index="5"></button>
-      <button class="board-cell" data-index="6"></button>
-      <button class="board-cell" data-index="7"></button>
-      <button class="board-cell" data-index="8"></button>
+    <div class="start-title">Tic Tac Toe</div>
+    <div class="game">
+      <div class="profile-container">
+        <img src="" alt="">
+        <div>Rat</div>
+      </div>
+      <div class="board">
+        <button class="board-cell" data-index="0"></button>
+        <button class="board-cell" data-index="1"></button>
+        <button class="board-cell" data-index="2"></button>
+        <button class="board-cell" data-index="3"></button>
+        <button class="board-cell" data-index="4"></button>
+        <button class="board-cell" data-index="5"></button>
+        <button class="board-cell" data-index="6"></button>
+        <button class="board-cell" data-index="7"></button>
+        <button class="board-cell" data-index="8"></button>
+      </div>
+      <div class="profile-container">
+        <img src="" alt="">
+        <div>Cat</div>
+      </div>
     </div>
   </div>
 </body>
